--- a/about.html
+++ b/about.html
@@ -14,44 +14,107 @@
 		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-		<title>О проекте: космическая энциклопедия с интерактивом</title>
+		<title>О проекте COSMOS - образовательная космическая энциклопедия 2025</title>
 		<meta
 			name="description"
-			content="Космическая энциклопедия: миссия проекта, технологии, команда. Интерактивные модели планет и галактик. Образовательный ресурс о Вселенной."
+			content="COSMOS - это современная образовательная космическая энциклопедия о планетах Солнечной системы, звёздах, галактиках, чёрных дырах и исследованиях космоса. Узнайте о нашей миссии, технологиях и 30+ научных статьях для студентов и преподавателей."
 		/>
-		<meta name="keywords" content="о проекте, космическая энциклопедия, образование" />
-		<meta property="og:title" content="О проекте: космическая энциклопедия с интерактивом" />
+		<meta
+			name="keywords"
+			content="COSMOS, космическая энциклопедия, о проекте, астрономия для студентов, планеты Солнечной системы, звёзды, галактики, чёрные дыры, исследования космоса, образовательный портал, БГТУ, Даниил Пупко, научные статьи, космология"
+		/>
+		<meta
+			property="og:title"
+			content="О проекте COSMOS - образовательная космическая энциклопедия 2025"
+		/>
 		<meta
 			property="og:description"
-			content="Космическая энциклопедия: миссия проекта, технологии, команда. Интерактивные модели планет и галактик. Образовательный ресурс о Вселенной."
+			content="COSMOS - современная образовательная космическая энциклопедия о планетах, звёздах, галактиках и чёрных дырах. 30+ научных статей для студентов и преподавателей."
 		/>
-		<meta property="og:type" content="article" />
+		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://seo.belstu.by/Pupko/about.html" />
 		<meta property="og:locale" content="ru_RU" />
+		<meta property="og:site_name" content="COSMOS - Космическая энциклопедия" />
+		<meta
+			property="og:image"
+			content="https://seo.belstu.by/Pupko/assets/images/hero-blackholes.jpg"
+		/>
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="article:author" content="Даниил Пупко" />
+		<meta property="article:section" content="О проекте" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="О проекте: космическая энциклопедия с интерактивом" />
+		<meta
+			name="twitter:title"
+			content="О проекте COSMOS - образовательная космическая энциклопедия 2025"
+		/>
 		<meta
 			name="twitter:description"
-			content="Космическая энциклопедия: миссия проекта, технологии, команда. Интерактивные модели планет и галактик. Образовательный ресурс о Вселенной."
+			content="COSMOS - современная образовательная космическая энциклопедия о планетах, звёздах, галактиках и чёрных дырах. 30+ научных статей для студентов и преподавателей."
 		/>
+		<meta
+			name="twitter:image"
+			content="https://seo.belstu.by/Pupko/assets/images/hero-blackholes.jpg"
+		/>
+		<link rel="canonical" href="https://seo.belstu.by/Pupko/about.html" />
 		<script type="application/ld+json">
 			{
 				"@context": "https://schema.org",
 				"@graph": [
 					{
+						"@type": "Organization",
+						"@id": "https://seo.belstu.by/Pupko/#organization",
+						"name": "COSMOS",
+						"url": "https://seo.belstu.by/Pupko/",
+						"description": "Образовательная космическая энциклопедия о планетах, звёздах, галактиках, чёрных дырах и исследованиях космоса",
+						"founder": {
+							"@type": "Person",
+							"name": "Даниил Пупко",
+							"affiliation": {
+								"@type": "EducationalOrganization",
+								"name": "Белорусский государственный технологический университет"
+							}
+						},
+						"contactPoint": {
+							"@type": "ContactPoint",
+							"contactType": "educational support"
+						},
+						"sameAs": [],
+						"knowsAbout": [
+							"астрономия",
+							"планеты",
+							"звёзды",
+							"галактики",
+							"чёрные дыры",
+							"космические исследования",
+							"космология"
+						]
+					},
+					{
 						"@type": "WebSite",
 						"@id": "https://seo.belstu.by/Pupko/#website",
 						"url": "https://seo.belstu.by/Pupko/",
-						"name": "COSMOS",
-						"inLanguage": "ru"
+						"name": "COSMOS - Космическая энциклопедия",
+						"description": "Современная образовательная космическая энциклопедия о планетах, звёздах, галактиках и чёрных дырах",
+						"publisher": {
+							"@id": "https://seo.belstu.by/Pupko/#organization"
+						},
+						"inLanguage": "ru",
+						"potentialAction": {
+							"@type": "SearchAction",
+							"target": "https://seo.belstu.by/Pupko/?q={search_term_string}",
+							"query-input": "required name=search_term_string"
+						}
 					},
 					{
 						"@type": "WebPage",
 						"@id": "https://seo.belstu.by/Pupko/about.html#webpage",
 						"url": "https://seo.belstu.by/Pupko/about.html",
+						"name": "О проекте COSMOS - образовательная космическая энциклопедия 2025",
+						"description": "COSMOS - современная образовательная космическая энциклопедия о планетах Солнечной системы, звёздах, галактиках, чёрных дырах и исследованиях космоса. Узнайте о нашей миссии, технологиях и 30+ научных статьях для студентов и преподавателей.",
 						"isPartOf": { "@id": "https://seo.belstu.by/Pupko/#website" },
-						"name": "О проекте: космическая энциклопедия с интерактивом",
-						"description": "Космическая энциклопедия: миссия проекта, технологии, команда. Интерактивные модели планет и галактик. Образовательный ресурс о Вселенной.",
+						"about": { "@id": "https://seo.belstu.by/Pupko/#organization" },
 						"inLanguage": "ru",
 						"mainEntityOfPage": "https://seo.belstu.by/Pupko/about.html"
 					},
@@ -70,6 +133,36 @@
 								"position": 2,
 								"name": "О проекте",
 								"item": "https://seo.belstu.by/Pupko/about.html"
+							}
+						]
+					},
+					{
+						"@type": "FAQPage",
+						"@id": "https://seo.belstu.by/Pupko/about.html#faq",
+						"mainEntity": [
+							{
+								"@type": "Question",
+								"name": "Кто создал этот проект?",
+								"acceptedAnswer": {
+									"@type": "Answer",
+									"text": "Космическая энциклопедия создана командой в лице студента БГТУ Пупко Даниила, стремящимся сделать знания о космосе доступными для широкой аудитории."
+								}
+							},
+							{
+								"@type": "Question",
+								"name": "Откуда берётся информация?",
+								"acceptedAnswer": {
+									"@type": "Answer",
+									"text": "Вся информация основана на научных данных из авторитетных источников: NASA, ESA, научных публикаций и исследований ведущих астрономических организаций."
+								}
+							},
+							{
+								"@type": "Question",
+								"name": "Могу ли я использовать материалы проекта?",
+								"acceptedAnswer": {
+									"@type": "Answer",
+									"text": "Материалы проекта предназначены для образовательных целей. При использовании информации просим указывать ссылку на источник."
+								}
 							}
 						]
 					}
@@ -142,6 +235,8 @@
 						<a class="nav__link" href="planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="galaxies/">ГАЛАКТИКИ</a>
+						<a class="nav__link" href="blackholes/">ЧЁРНЫЕ ДЫРЫ</a>
+						<a class="nav__link" href="exploration/">ИССЛЕДОВАНИЯ</a>
 						<a class="nav__link" href="about.html">О НАС</a>
 					</nav>
 					<button class="burger" id="burger" aria-label="Меню">
@@ -176,7 +271,7 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">ВВЕДЕНИЕ</span>
-						<h2 class="section__title">Добро пожаловать в космическую энциклопедию</h2>
+						<h2 class="section__title">Добро пожаловать в проект COSMOS</h2>
 					</div>
 					<article
 						class="animate-fade-in"
@@ -188,27 +283,31 @@
 						"
 					>
 						<p style="margin-bottom: 16px; font-size: 18px; color: var(--fg)">
-							Космическая энциклопедия — это цифровое путешествие по бесконечным
-							просторам Вселенной, где научные знания встречаются с современным
-							дизайном. На страницах
-							<a class="text-link" href="planets/">планет</a>,
-							<a class="text-link" href="stars/">звёзд</a> и
-							<a class="text-link" href="galaxies/">галактик</a> вы найдёте
-							интерактивные модели и структурированные обзоры.
+							COSMOS — это космическая энциклопедия, которая объединяет в одном месте
+							материалы о <a class="text-link" href="planets/">планетах</a>,
+							<a class="text-link" href="stars/">звёздах</a>,
+							<a class="text-link" href="galaxies/">галактиках</a>,
+							<a class="text-link" href="blackholes/">чёрных дырах</a> и
+							<a class="text-link" href="exploration/">исследовании космоса</a>. Здесь
+							сочетаются научная точность, современный дизайн и удобная структура
+							разделов.
 						</p>
 						<p style="margin-bottom: 16px">
-							Наш проект создан для всех, кто интересуется астрономией, космологией и
-							исследованием космоса. Мы собрали проверенную информацию о планетах,
-							звёздах, галактиках и других космических объектах, представив её в
-							удобном и понятном формате и снабдив контекстной перелинковкой между
-							ключевыми разделами.
+							Проект ориентирован на студентов, преподавателей и всех, кто
+							интересуется астрономией, космологией и космонавтикой. На сайте собраны
+							обзоры планет и их спутников, эволюции звёзд, строения галактик, свойств
+							чёрных дыp и ключевых миссий по исследованию Вселенной — от
+							<a class="text-link" href="exploration/apollo-11.html">Apollo 11</a>
+							до <a class="text-link" href="exploration/jwst.html">телескопа JWST</a>.
 						</p>
 						<p>
-							Через минималистичный дизайн и интуитивную навигацию мы создаём
+							Через минималистичный интерфейс и интуитивную навигацию мы создаём
 							пространство, где сложные научные концепции становятся ясными и
 							увлекательными для каждого. Начните с обзора
 							<a class="text-link" href="index.html">главной страницы</a>, чтобы
-							выбрать интересующий сценарий изучения.
+							выбрать удобный маршрут: от планет Солнечной системы до
+							<a class="text-link" href="blackholes/">квантовой физики чёрных дыр</a>
+							и <a class="text-link" href="galaxies/">эволюции галактик</a>.
 						</p>
 					</article>
 				</div>
@@ -268,22 +367,24 @@
 							Мы стремимся сделать знания о космосе доступными и понятными для
 							каждого, кто интересуется тайнами Вселенной. Наша цель — вдохновить
 							новое поколение исследователей и популяризировать науку через
-							качественный образовательный контент, используя материалы из разделов
-							<a class="text-link" href="stars/">звёзды</a> и
-							<a class="text-link" href="galaxies/">галактики</a>.
+							качественный образовательный контент по всем ключевым темам: от
+							<a class="text-link" href="planets/">планетных миров</a> и
+							<a class="text-link" href="stars/">эволюции звёзд</a> до
+							<a class="text-link" href="blackholes/">чёрных дыр</a> и
+							<a class="text-link" href="exploration/">космических миссий</a>.
 						</p>
 						<p style="margin-bottom: 16px">
-							Космическая энциклопедия объединяет энтузиастов астрономии, студентов,
-							преподавателей и всех, кто хочет расширить свои знания о космосе. Мы
-							верим, что понимание устройства Вселенной делает нас более осознанными
-							жителями планеты Земля и стимулирует интерес к изучению
-							<a class="text-link" href="planets/">планетных миров</a>.
+							COSMOS объединяет энтузиастов астрономии, студентов, преподавателей и
+							всех, кто хочет системно расширять свои знания о Вселенной. Мы верим,
+							что понимание устройства космоса делает нас более осознанными жителями
+							планеты Земля и стимулирует интерес к научным исследованиям.
 						</p>
 						<p>
-							Каждый элемент проекта разработан с заботой о пользователе и стремлением
-							к совершенству в представлении научной информации. Мы постоянно
-							обновляем контент и связываем статьи между собой, чтобы вы могли быстро
-							переходить к нужным темам.
+							Каждый элемент проекта разработан с заботой о пользователе и вниманием к
+							деталям: от навигации и визуала до SEO и структурирования материалов. Мы
+							постоянно обновляем контент, добавляем новые статьи и усиливаем
+							перелинковку между разделами, чтобы вы могли легко перемещаться от одной
+							темы к другой.
 						</p>
 					</article>
 				</div>
@@ -346,16 +447,16 @@
 					</div>
 					<div class="stats">
 						<div class="stat animate-fade-up" style="animation-delay: 0ms">
-							<div class="stat__value">3</div>
-							<div class="stat__label">ОСНОВНЫХ РАЗДЕЛА</div>
+							<div class="stat__value">5</div>
+							<div class="stat__label">ОСНОВНЫХ РАЗДЕЛОВ</div>
 						</div>
 						<div class="stat animate-fade-up" style="animation-delay: 150ms">
-							<div class="stat__value">100+</div>
-							<div class="stat__label">КОСМИЧЕСКИХ ОБЪЕКТОВ</div>
+							<div class="stat__value">30+</div>
+							<div class="stat__label">СТАТЕЙ И ОБЗОРОВ</div>
 						</div>
 						<div class="stat animate-fade-up" style="animation-delay: 300ms">
 							<div class="stat__value">2025</div>
-							<div class="stat__label">ГОД ЗАПУСКА</div>
+							<div class="stat__label">ГОД ЗАПУСКА ПРОЕКТА</div>
 						</div>
 					</div>
 				</div>
@@ -379,13 +480,18 @@
 					>
 						<p style="margin-bottom: 16px">
 							Мы не останавливаемся на достигнутом. В ближайших обновлениях
-							планируется добавление раздела о <strong>космонавтике</strong> с
-							детальной хронологией пилотируемых полетов и интерактивной картой МКС.
+							планируется расширение раздела
+							<a class="text-link" href="exploration/">исследований космоса</a>
+							новыми миссиями и визуализациями, а также углубление материалов по
+							<a class="text-link" href="blackholes/">чёрным дырам</a> и
+							<a class="text-link" href="galaxies/">структуре галактик</a>.
 						</p>
 						<p>
-							Также мы работаем над внедрением 3D-моделей для всех основных небесных
-							тел, чтобы вы могли вращать и рассматривать их прямо в браузере. Следите
-							за обновлениями!
+							Мы также планируем развивать интерактив: 3D‑модели небесных тел,
+							улучшенные диаграммы и анимации, поддержку нескольких языков и
+							дополнительные инструменты для преподавателей и студентов. Следите за
+							обновлениями — космическая энциклопедия будет расти вместе с интересом к
+							Вселенной.
 						</p>
 					</article>
 				</div>
