--- a/blackholes/accretion-disks.html
+++ b/blackholes/accretion-disks.html
@@ -204,57 +204,94 @@
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">СТРУКТУРА</span>
-						<h2 class="section__title">Космический буфет</h2>
+						<span class="section__tag">ФИЗИКА</span>
+						<h2 class="section__title">Анатомия водоворота</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							Чёрные дыры не могут «всасывать» материю на расстоянии, как пылесосы.
-							Газ и пыль, попадая в гравитационное поле, начинают вращаться, образуя
-							плоский <strong>аккреционный диск</strong>. Из-за трения слоев диск
-							разогревается до миллионов градусов, излучая в рентгеновском диапазоне.
+							Газ и пыль, попадающие в гравитационное поле чёрной дыры, не падают на
+							неё по прямой линии. Из-за сохранения момента импульса материя
+							закручивается, образуя плоский вращающийся диск. Это похоже на воду,
+							стекающую в сливное отверстие.
+						</p>
+						<p style="margin-bottom: 16px">
+							Внутри диска слои газа движутся с разными скоростями: внутренние быстрее
+							внешних. Трение между слоями (вязкость) разогревает материю до миллионов
+							градусов, заставляя её светиться в рентгеновском и ультрафиолетовом
+							диапазонах. Эффективность преобразования массы в энергию здесь достигает
+							40% (для сравнения, термоядерный синтез даёт менее 1%).
 						</p>
 						<p>
-							Именно это свечение мы видим, наблюдая за активными ядрами галактик и
-							квазарами. Сама чёрная дыра остается невидимой в центре этого огненного
-							вихря.
+							Магнитные поля играют ключевую роль в переносе момента импульса наружу,
+							позволяя материи медленно мигрировать внутрь, к горизонту событий.
 						</p>
 					</article>
 				</div>
 			</section>
 
-			<!-- Компоненты -->
+			<!-- Типы дисков -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">ЭЛЕМЕНТЫ</span>
-						<h2 class="section__title">Составные части системы</h2>
+						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
+						<h2 class="section__title">Виды аккреции</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
-							<h3 class="text-card__title">Горячая корона</h3>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Тонкие диски</h3>
 							<p class="text-card__desc">
-								Облако плазмы над и под диском, где фотоны приобретают огромную
-								энергию через эффект Комптона.
+								Модель Шакуры-Сюняева. Геометрически тонкие, но оптически толстые
+								диски. Очень эффективны в излучении энергии. Характерны для ярких
+								квазаров.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
-							<h3 class="text-card__title">Джеты (струи)</h3>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Толстые диски</h3>
 							<p class="text-card__desc">
-								Магнитное поле выбрасывает часть материи с полюсов со скоростью,
-								близкой к световой, на тысячи световых лет.
+								Когда темп аккреции очень низок или очень высок, диск "раздувается".
+								Такие потоки (ADAF) плохо излучают энергию, унося тепло внутрь дыры.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
-							<h3 class="text-card__title">ISCO</h3>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Сверхкритические</h3>
 							<p class="text-card__desc">
-								Внутренняя стабильная круговая орбита — граница, после которой
-								материя неизбежно падает в дыру без вращения.
+								Когда материи падает слишком много, излучение начинает "сдувать"
+								газ. Возникают мощнейшие ветра, и формируются "толстые" диски с
+								узкими каналами для излучения.
 							</p>
-						</div>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<!-- Джеты -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">АКТИВНОСТЬ</span>
+						<h2 class="section__title">Релятивистские джеты</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Не вся материя падает в чёрную дыру. Часть её выбрасывается наружу вдоль
+							оси вращения в виде узких пучков плазмы — <strong>джетов</strong>.
+							Скорость частиц в джетах близка к скорости света.
+						</p>
+						<p style="margin-bottom: 16px">
+							Механизм запуска джетов (процесс Блэнфорда-Знаека) связан с
+							закручиванием линий магнитного поля вращающейся чёрной дырой. Это
+							работает как гигантская динамо-машина.
+						</p>
+						<p>
+							Джеты могут простираться на миллионы световых лет, выходя далеко за
+							пределы родительской галактики и влияя на эволюцию скоплений галактик.
+						</p>
 					</article>
 				</div>
 			</section>
@@ -263,27 +300,63 @@
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">ИСТОРИЯ</span>
-						<h2 class="section__title">Взгляд в бездну</h2>
+						<span class="section__tag">НАБЛЮДЕНИЯ</span>
+						<h2 class="section__title">Увидеть невидимое</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							Долгое время аккреционные диски существовали лишь в теории и на
-							иллюстрациях художников. Однако в 2019 году проект
-							<strong>Event Horizon Telescope (EHT)</strong>, объединивший
-							радиотелескопы по всей Земле, получил первое в истории изображение тени
-							чёрной дыры в центре галактики M87.
+							Аккреционные диски — самые яркие постоянные источники излучения во
+							Вселенной. Мы изучаем их с помощью рентгеновских телескопов, таких как
+							Chandra и XMM-Newton. Спектральный анализ позволяет определить состав
+							газа, температуру и скорость вращения.
 						</p>
-						<p>
-							На снимке четко видно яркое кольцо — это и есть светящийся газ
-							аккреционного диска, огибающий тень горизонта событий. Это стало прямым
-							подтверждением общей теории относительности Эйнштейна в экстремальных
-							условиях гравитации.
+						<p style="margin-bottom: 16px">
+							В 2019 году коллаборация Event Horizon Telescope получила прямое
+							радиоизображение аккреционного потока вокруг сверхмассивной чёрной дыры
+							M87*. Яркое асимметричное кольцо подтвердило предсказания о движении
+							света в сильном гравитационном поле.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Почему диск плоский?</summary>
+							<p>
+								Изначальное облако газа может быть любой формы, но столкновения
+								частиц гасят вертикальные движения, оставляя только вращение в одной
+								плоскости. Это тот же механизм, что делает плоскими кольца Сатурна и
+								спиральные галактики.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Почему материя светится?</summary>
+							<p>
+								Гравитационная энергия падения превращается в тепловую из-за трения
+								слоев газа друг о друга. Чем ближе к дыре, тем быстрее вращение и
+								выше температура.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Всегда ли есть диск?</summary>
+							<p>
+								Нет. Если "еды" мало, диск может быть очень тусклым или
+								отсутствовать вовсе. Наша чёрная дыра Стрелец A* сейчас находится в
+								"спящем" режиме с очень слабым аккреционным потоком.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
