--- a/blackholes/event-horizon.html
+++ b/blackholes/event-horizon.html
@@ -169,9 +169,7 @@
 		<main>
 			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
-				<span class="breadcrumbs__separator">/</span>
 				<a class="breadcrumbs__link u-url" href="../blackholes/">Чёрные дыры</a>
-				<span class="breadcrumbs__separator">/</span>
 				<span class="breadcrumbs__current p-name">Горизонт событий</span>
 			</nav>
 			<section class="hero" aria-label="Горизонт событий">
@@ -255,6 +253,179 @@
 							</p>
 						</div>
 					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ПРИЛИВНЫЕ СИЛЫ</span>
+						<h2 class="section__title">Разрыв на части</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							При приближении к горизонту событий гравитационный градиент становится
+							настолько сильным, что возникает <strong>спагеттификация</strong> —
+							объект растягивается в направлении к чёрной дыре и сжимается в
+							перпендикулярных направлениях.
+						</p>
+						<p style="margin-bottom: 16px">
+							Для чёрных дыр звёздной массы приливные силы на горизонте событий
+							разрушительны — любой объект будет разорван на атомы ещё до пересечения
+							границы. Однако для сверхмассивных чёрных дыр приливные силы на
+							горизонте относительно слабы, что позволяет пересечь его без разрушения.
+						</p>
+						<p>
+							Точка, где приливные силы становятся смертельными, называется
+							<strong>пределом Роша</strong>. Для Стрельца A* он находится далеко за
+							пределами горизонта событий, а для чёрной дыры в M87* — практически на
+							самом горизонте.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ВРЕМЯ</span>
+						<h2 class="section__title">Гравитационное замедление</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Согласно общей теории относительности, время замедляется в сильном
+							гравитационном поле. Для наблюдателя на безопасном расстоянии часы
+							падающего объекта будут всё медленнее идти по мере приближения к
+							горизонту событий.
+						</p>
+						<p style="margin-bottom: 16px">
+							На горизонте событий время останавливается полностью — с точки зрения
+							внешнего наблюдателя. Сам падающий объект не замечает этого замедления и
+							пересекает горизонт за конечное собственное время. Для него время
+							продолжает течь нормально.
+						</p>
+						<p>
+							Этот эффект подтверждён экспериментально: часы на спутниках GPS работают
+							быстрее на 38 микросекунд в день из-за более слабого гравитационного
+							поля по сравнению с поверхностью Земли. Вблизи горизонта событий этот
+							эффект был бы бесконечно большим.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ТЕМПЕРАТУРА</span>
+						<h2 class="section__title">Излучение Хокинга</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							В 1974 году Стивен Хокинг показал, что горизонты событий не полностью
+							чёрные. Из-за квантовых эффектов они испускают слабое тепловое излучение
+							с температурой, обратной массе чёрной дыры.
+						</p>
+						<p style="margin-bottom: 16px">
+							Для чёрной дыры массой Солнца температура излучения Хокинга составляет
+							всего 60 нанокельвин — холоднее космического микроволнового фона.
+							Сверхмассивные чёрные дыры ещё холоднее. Только микроскопические чёрные
+							дыры могли бы иметь заметную температуру.
+						</p>
+						<p>
+							Это излучение приводит к медленному испарению чёрных дыр. Чёрная дыра
+							массой Солнца испарилась бы за 10^67 лет — гораздо дольше возраста
+							Вселенной. Излучение Хокинга — одно из немногих соединений общей теории
+							относительности и квантовой механики.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">НАБЛЮДЕНИЯ</span>
+						<h2 class="section__title">Как увидеть невидимое</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Прямое наблюдение горизонта событий стало возможным только в 2019 году с
+							помощью телескопа Event Horizon Telescope. Учёные получили первое
+							изображение тени чёрной дыры в галактике M87 — тёмного круга на фоне
+							светящегося аккреционного диска.
+						</p>
+						<p style="margin-bottom: 16px">
+							Размер тени примерно в 2.6 раза больше радиуса Шварцшильда из-за
+							гравитационного линзирования — свет искривляется вокруг горизонта,
+							создая характерное кольцо. В 2022 году было получено изображение
+							Стрельца A* в центре нашей галактики.
+						</p>
+						<p>
+							Будущие миссии, такие как Event Horizon Explorer, позволят получить
+							более детальные изображения и даже "фильмы" динамики газа вблизи
+							горизонтов событий. Это откроет новые возможности для проверки общей
+							теории относительности в экстремальных условиях.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Можно ли вырваться с горизонта событий?</summary>
+							<p>
+								Нет, горизонт событий — это точка невозврата. Даже свет не может
+								покинуть эту область. Любой объект, пересёкший горизонт, неизбежно
+								падает в сингулярность.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Что происходит с информацией внутри чёрной дыры?</summary>
+							<p>
+								Это нерешённая проблема — "парадокс информации". Квантовая механика
+								требует сохранения информации, но общая теория относительности
+								допускает её уничтожение в сингулярности. Излучение Хокинга может
+								нести информацию, но механизм не до конца понятен.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Почему горизонт событий называется "горизонтом"?</summary>
+							<p>
+								По аналогии с морским горизонтом — это граница того, что мы можем
+								видеть. Как за морским горизонтом скрыты объекты, так и за
+								горизонтом событий скрыты все события внутри чёрной дыры от внешнего
+								наблюдателя.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+							<summary>Есть ли у вращающихся чёрных дыр особые горизонты?</summary>
+							<p>
+								Да, у вращающихся чёрных дыр (Керра) есть два горизонта: внешний и
+								внутренний. Между ними существует "эргосфера", где невозможно
+								оставаться неподвижным. Это позволяет извлекать энергию из вращения
+								чёрной дыры (процесс Пенроуза).
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
