--- a/blackholes/hawking-radiation.html
+++ b/blackholes/hawking-radiation.html
@@ -172,9 +172,7 @@
 		<main>
 			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
-				<span class="breadcrumbs__separator">/</span>
 				<a class="breadcrumbs__link u-url" href="../blackholes/">Чёрные дыры</a>
-				<span class="breadcrumbs__separator">/</span>
 				<span class="breadcrumbs__current p-name">Излучение Хокинга</span>
 			</nav>
 			<section class="hero" aria-label="Излучение Хокинга">
@@ -202,93 +200,168 @@
 				</div>
 			</section>
 
-			<!-- Теория -->
+			<!-- Механизм -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">КВАНТОВАЯ ФИЗИКА</span>
-						<h2 class="section__title">Кванты против гравитации</h2>
+						<span class="section__tag">МЕХАНИЗМ</span>
+						<h2 class="section__title">Кванты на краю бездны</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							В 1974 году Стивен Хокинг предсказал, что чёрные дыры не являются
-							абсолютно чёрными. Из-за квантовых эффектов на горизонте событий они
-							должны испускать тепловое излучение. Это происходит из-за рождения пар
-							виртуальных частиц: если одна падает в дыру, а другая улетает, дыра
-							теряет массу.
+							В вакууме постоянно рождаются и исчезают пары виртуальных частиц —
+							частица и античастица. Обычно они аннигилируют почти мгновенно,
+							возвращая энергию вакууму. Однако вблизи горизонта событий ситуация
+							меняется кардинально.
+						</p>
+						<p style="margin-bottom: 16px">
+							Сильное гравитационное поле может разорвать пару. Если одна частица (с
+							отрицательной энергией) падает за горизонт, а другая (с положительной)
+							улетает в пространство, то внешнему наблюдателю кажется, что чёрная дыра
+							испустила частицу.
 						</p>
 						<p>
-							Этот процесс означает, что чёрные дыры со временем
-							<strong>испаряются</strong>. Для массивных дыр этот процесс занимает
-							триллионы лет, но микроскопические дыры могли бы испаряться мгновенно,
-							выделяя огромную энергию.
+							Чтобы закон сохранения энергии выполнялся, упавшая частица должна
+							уменьшить массу чёрной дыры. Таким образом, излучая, чёрная дыра теряет
+							свою массу и постепенно испаряется.
 						</p>
 					</article>
 				</div>
 			</section>
 
-			<!-- Факты -->
+			<!-- Температура и время жизни -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">СВОЙСТВА</span>
-						<h2 class="section__title">Особенности процесса</h2>
+						<span class="section__tag">ТЕРМОДИНАМИКА</span>
+						<h2 class="section__title">Жизнь и смерть чёрной дыры</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
-							<h3 class="text-card__title">Обратная зависимость</h3>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Температура Хокинга</h3>
 							<p class="text-card__desc">
-								Чем меньше масса чёрной дыры, тем выше её температура и тем быстрее
-								она испаряется. Большая дыра холоднее космического фона.
+								Температура чёрной дыры обратно пропорциональна её массе. Дыра
+								массой с Солнце имеет температуру всего 0.00000006 Кельвина. Это
+								намного холоднее реликтового излучения (2.7 К), поэтому такие дыры
+								сейчас растут, а не испаряются.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
-							<h3 class="text-card__title">Взрывной финал</h3>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Скорость испарения</h3>
 							<p class="text-card__desc">
-								Последние мгновения жизни чёрной дыры — это мощный взрыв
-								гамма-излучения, эквивалентный детонации миллионов ядерных бомб.
+								По мере испарения масса дыры уменьшается, температура растёт, и
+								процесс ускоряется. Последние стадии жизни чёрной дыры — это
+								взрывообразный выброс энергии.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
-							<h3 class="text-card__title">Парадокс информации</h3>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Время жизни</h3>
 							<p class="text-card__desc">
-								Если дыра исчезает, что происходит с информацией о том, что в неё
-								упало? Это одна из главных нерешенных проблем современной физики.
+								Чёрная дыра солнечной массы испарится за 10^67 лет. Сверхмассивная
+								дыра в центре галактики проживёт 10^100 лет. Это невообразимо долгие
+								сроки, превышающие текущий возраст Вселенной в миллиарды раз.
 							</p>
-						</div>
-					</article>
+						</article>
+					</div>
 				</div>
 			</section>
 
-			<!-- Значение -->
+			<!-- Информационный парадокс -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">НАУКА</span>
-						<h2 class="section__title">Вклад в физику</h2>
+						<span class="section__tag">ПАРАДОКС</span>
+						<h2 class="section__title">Проблема потери информации</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							Открытие излучения Хокинга стало поворотным моментом в физике, объединив
-							термодинамику, квантовую механику и общую теорию относительности. Оно
-							показало, что черные дыры не вечны и подчиняются законам термодинамики,
-							имея энтропию и температуру.
+							Излучение Хокинга породило одну из главных проблем современной физики —
+							<strong>информационный парадокс</strong>. Согласно квантовой механике,
+							информация о состоянии системы никогда не исчезает. Однако излучение
+							Хокинга является тепловым и, казалось бы, не несет информации о том, что
+							упало в дыру.
+						</p>
+						<p style="margin-bottom: 16px">
+							Если чёрная дыра полностью испарится, куда денется информация о материи,
+							из которой она образовалась? Это противоречие между Общей теорией
+							относительности и Квантовой механикой.
 						</p>
 						<p>
-							Хотя непосредственно зафиксировать это излучение астрономическими
-							методами пока невозможно из-за его крайней слабости, ученые создают
-							<strong>аналоговые модели</strong> черных дыр в лабораториях. Используя
-							звуковые волны в сверхтекучих жидкостях и оптические системы, физики
-							наблюдают эффекты, аналогичные излучению Хокинга, что подтверждает
-							теоретические расчеты.
+							В последние годы предложено несколько решений, включая теорию "мягких
+							волос" и идею о том, что информация сохраняется на горизонте событий в
+							виде голограммы (Голографический принцип).
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- Эксперименты -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ЭКСПЕРИМЕНТЫ</span>
+						<h2 class="section__title">Поиски доказательств</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Обнаружить излучение Хокинга от астрофизических чёрных дыр невозможно —
+							оно слишком слабое. Однако физики создают
+							<strong>аналоговые чёрные дыры</strong>
+							в лабораториях, используя звуковые волны в сверхтекучих жидкостях или
+							световые импульсы в оптоволокне.
+						</p>
+						<p>
+							В 2016 году Джефф Штейнхауэр сообщил о наблюдении квантового эффекта,
+							аналогичного излучению Хокинга, в конденсате Бозе-Эйнштейна. Это стало
+							сильным аргументом в пользу теории, хотя полная квантовая гравитация всё
+							ещё остаётся загадкой.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Может ли чёрная дыра исчезнуть полностью?</summary>
+							<p>
+								Теоретически да. В конце своей жизни она должна взорваться и
+								исчезнуть, оставив после себя лишь излучение. Однако неизвестно,
+								останется ли микроскопический остаток (планковский реликт).
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Почему большие дыры холоднее маленьких?</summary>
+							<p>
+								Это связано с кривизной пространства-времени на горизонте событий. У
+								маленьких дыр кривизна больше, что усиливает квантовые эффекты и
+								повышает температуру излучения.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Опасно ли излучение Хокинга для Земли?</summary>
+							<p>
+								Нет. Излучение от известных нам чёрных дыр ничтожно мало. Опасность
+								могла бы представлять только микроскопическая чёрная дыра,
+								взрывающаяся в непосредственной близости от планеты.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
