--- a/exploration/apollo-11.html
+++ b/exploration/apollo-11.html
@@ -166,9 +166,7 @@
 		<main>
 			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
-				<span class="breadcrumbs__separator">/</span>
 				<a class="breadcrumbs__link u-url" href="../exploration/">Исследование</a>
-				<span class="breadcrumbs__separator">/</span>
 				<span class="breadcrumbs__current p-name">Apollo 11</span>
 			</nav>
 			<section class="hero" aria-label="Apollo 11">
@@ -193,77 +191,195 @@
 				</div>
 			</section>
 
-			<!-- Обзор -->
+			<!-- Экипаж -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">МИССИЯ</span>
-						<h2 class="section__title">Краткая история полёта</h2>
+						<span class="section__tag">КОМАНДА</span>
+						<h2 class="section__title">Легендарный экипаж</h2>
+					</div>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Нил Армстронг</h3>
+							<p class="text-card__desc">
+								Командир миссии. Опытный летчик-испытатель. Именно ему выпала честь
+								сделать первый шаг на поверхность Луны и произнести историческую
+								фразу.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Базз Олдрин</h3>
+							<p class="text-card__desc">
+								Пилот лунного модуля "Орёл". Второй человек на Луне. Специалист по
+								орбитальной стыковке, доктор наук MIT.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Майкл Коллинз</h3>
+							<p class="text-card__desc">
+								Пилот командного модуля "Колумбия". Ожидал коллег на орбите Луны в
+								полном одиночестве, пока они находились на поверхности.
+							</p>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<!-- Техника -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ТЕХНОЛОГИИ</span>
+						<h2 class="section__title">Ракета Saturn V</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							16 июля 1969 года ракета Saturn V стартовала с мыса Кеннеди, выведя
-							корабль Apollo 11 на траекторию к Луне. Экипаж: командир
-							<strong>Нил Армстронг</strong>, пилот лунного модуля
-							<strong>Базз Олдрин</strong> и пилот командного модуля
-							<strong>Майкл Коллинз</strong>.
+							Самая мощная ракета, когда-либо успешно летавшая в космос. Высота — 110
+							метров (выше статуи Свободы), масса — почти 3000 тонн. Пять двигателей
+							F-1 первой ступени сжигали 13 тонн топлива в секунду.
 						</p>
 						<p>
-							20 июля лунный модуль Eagle отделился и сел в Моря Спокойствия. Фраза
-							Армстронга «Малый шаг человека, но гигантский скачок для человечества»
-							стала символом всей эпохи освоения космоса.
+							Бортовой компьютер Apollo (AGC) имел всего 74 КБ постоянной памяти и 4
+							КБ оперативной, но смог безошибочно выполнить навигацию на расстоянии
+							380 000 км от Земли.
 						</p>
 					</article>
 				</div>
 			</section>
 
-			<!-- Этапы полёта -->
+			<!-- Хронология -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">ХРОНОЛОГИЯ</span>
-						<h2 class="section__title">Ключевые этапы миссии</h2>
+						<h2 class="section__title">8 дней, изменивших мир</h2>
 					</div>
 					<div class="timeline">
 						<article
 							class="timeline__item animate-fade-up"
 							style="animation-delay: 0ms"
 						>
-							<span class="timeline__year">1969-07-16</span>
+							<span class="timeline__year">16 июля</span>
 							<div class="timeline__content">
-								Старт ракеты Saturn V с площадки LC-39A.
+								<strong>Старт</strong><br />
+								Мыс Канаверал, 13:32 UTC. Миллионы людей наблюдают за запуском в
+								прямом эфире.
 							</div>
 						</article>
 						<article
 							class="timeline__item animate-fade-up"
 							style="animation-delay: 100ms"
 						>
-							<span class="timeline__year">1969-07-19</span>
+							<span class="timeline__year">19 июля</span>
 							<div class="timeline__content">
-								Выход на орбиту Луны, подготовка к посадке.
+								<strong>Орбита Луны</strong><br />
+								Корабль выходит на окололунную орбиту. Экипаж видит обратную сторону
+								Луны.
 							</div>
 						</article>
 						<article
 							class="timeline__item animate-fade-up"
 							style="animation-delay: 200ms"
 						>
-							<span class="timeline__year">1969-07-20</span>
+							<span class="timeline__year">20 июля</span>
 							<div class="timeline__content">
-								Посадка модуля Eagle и первый выход человека на поверхность Луны.
+								<strong>Посадка</strong><br />
+								"Хьюстон, говорит База Спокойствия. Орёл сел". Армстронг и Олдрин
+								прилуняются, избежав кратеров с помощью ручного управления. Остаток
+								топлива — на 25 секунд.
 							</div>
 						</article>
 						<article
 							class="timeline__item animate-fade-up"
 							style="animation-delay: 300ms"
 						>
-							<span class="timeline__year">1969-07-24</span>
+							<span class="timeline__year">21 июля</span>
 							<div class="timeline__content">
-								Приводнение в Тихом океане и завершение миссии.
+								<strong>Выход</strong><br />
+								Армстронг ступает на поверхность. Астронавты проводят на Луне 21 час
+								36 минут, из них 2.5 часа вне корабля.
 							</div>
 						</article>
+						<article
+							class="timeline__item animate-fade-up"
+							style="animation-delay: 400ms"
+						>
+							<span class="timeline__year">24 июля</span>
+							<div class="timeline__content">
+								<strong>Возвращение</strong><br />
+								Приводнение в Тихом океане. Экипаж помещают в карантин на 21 день.
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<!-- Наука -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">НАУКА</span>
+						<h2 class="section__title">Эксперименты на Луне</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Астронавты установили комплект научных приборов EASEP, включающий
+							сейсмометр (для изучения лунотрясений) и лазерный уголковый отражатель.
+						</p>
+						<p style="margin-bottom: 16px">
+							Отражатель работает до сих пор: ученые с Земли направляют на него
+							лазеры, чтобы с точностью до миллиметра измерять расстояние до Луны. Это
+							позволило узнать, что Луна удаляется от нас на 3.8 см в год.
+						</p>
+						<p>
+							Также было собрано 21.55 кг лунных камней и пыли, анализ которых
+							показал, что Луна сформировалась около 4.5 млрд лет назад, вероятно, в
+							результате столкновения Земли с другой планетой (Тейей).
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Почему флаг "развевался" в вакууме?</summary>
+							<p>
+								Флаг имел Г-образный каркас (горизонтальную перекладину), чтобы
+								полотно не обвисало. "Колебания" возникли из-за инерции, когда
+								астронавты вкручивали древко в грунт, и затухали долго из-за
+								отсутствия сопротивления воздуха.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Видны ли следы астронавтов сейчас?</summary>
+							<p>
+								Да, современные орбитальные аппараты (LRO) сфотографировали места
+								посадок Apollo. Видны посадочные ступени, тропинки следов и
+								оставленное оборудование. В вакууме следы могут сохраняться миллионы
+								лет.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Почему не видно звезд на фото?</summary>
+							<p>
+								Из-за ярко освещенной Солнцем поверхности Луны. Камеры были
+								настроены на короткую выдержку, чтобы снять астронавтов и ландшафт.
+								Слабый свет звезд просто не успевал запечатлеться на пленке.
+							</p>
+						</details>
 					</div>
 				</div>
 			</section>
