--- a/exploration/jwst.html
+++ b/exploration/jwst.html
@@ -166,9 +166,7 @@
 		<main>
 			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
-				<span class="breadcrumbs__separator">/</span>
 				<a class="breadcrumbs__link u-url" href="../exploration/">Исследование</a>
-				<span class="breadcrumbs__separator">/</span>
 				<span class="breadcrumbs__current p-name">James Webb</span>
 			</nav>
 			<section class="hero" aria-label="James Webb">
@@ -201,47 +199,134 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">ИНЖЕНЕРИЯ</span>
-						<h2 class="section__title">Технологическое чудо</h2>
+						<h2 class="section__title">Золотое зеркало</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							Космический телескоп <strong>James Webb (JWST)</strong> — самый большой
-							и мощный телескоп, когда-либо запущенный в космос. Его главное зеркало
-							диаметром 6,5 метра состоит из 18 позолоченных сегментов из бериллия.
+							Главное зеркало <strong>JWST</strong> имеет диаметр 6.5 метра (в 2.5
+							раза больше Хаббла) и состоит из 18 шестиугольных сегментов. Они
+							изготовлены из легкого бериллия и покрыты тончайшим слоем чистого золота
+							для идеального отражения инфракрасных лучей.
+						</p>
+						<p style="margin-bottom: 16px">
+							Чтобы уловить слабое тепловое излучение далеких галактик, телескоп
+							должен быть экстремально холодным (около -223°C). Его защищает
+							пятислойный тепловой щит размером с теннисный корт, который блокирует
+							жар от Солнца и Земли.
 						</p>
 						<p>
-							Телескоп работает в инфракрасном диапазоне, что позволяет ему видеть
-							сквозь пылевые облака, где рождаются звёзды, и заглядывать в прошлое на
-							13,5 миллиардов лет, наблюдая первые галактики после Большого взрыва.
+							Телескоп был настолько велик, что его пришлось сложить как оригами,
+							чтобы поместить в ракету Ariane 5. Развертывание в космосе стало
+							сложнейшей инженерной операцией в истории.
 						</p>
 					</article>
 				</div>
 			</section>
 
-			<!-- Орбита -->
+			<!-- Хаббл vs Уэбб -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">ЛОКАЦИЯ</span>
-						<h2 class="section__title">Точка Лагранжа L2</h2>
+						<span class="section__tag">СРАВНЕНИЕ</span>
+						<h2 class="section__title">Хаббл против Уэбба</h2>
+					</div>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Диапазон</h3>
+							<p class="text-card__desc">
+								Хаббл "видит" в основном в видимом и ультрафиолетовом свете. Уэбб —
+								в инфракрасном. Это позволяет ему смотреть сквозь пылевые облака.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Орбита</h3>
+							<p class="text-card__desc">
+								Хаббл вращается вокруг Земли (570 км). Уэбб — вокруг Солнца в точке
+								Лагранжа L2 (1.5 млн км от Земли), всегда оставаясь в тени планеты.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Чувствительность</h3>
+							<p class="text-card__desc">
+								Уэбб в 100 раз мощнее Хаббла. Он способен заметить тепловую
+								сигнатуру шмеля на расстоянии Луны.
+							</p>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<!-- Открытия -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ОТКРЫТИЯ</span>
+						<h2 class="section__title">Первые результаты</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
-						<p style="margin-bottom: 16px">
-							В отличие от Хаббла, который вращается вокруг Земли, JWST находится в
-							точке Лагранжа L2 системы Солнце-Земля на расстоянии 1,5 млн км от нас.
-						</p>
-						<p>
-							Это позволяет ему всегда оставаться в тени Земли, защищая чувствительные
-							приборы от солнечного тепла гигантским пятислойным теплозащитным экраном
-							размером с теннисный корт.
-						</p>
+						<ul class="list" style="margin-left: 20px; list-style-type: disc">
+							<li style="margin-bottom: 10px">
+								<strong>Первые галактики:</strong> Уэбб обнаружил галактики,
+								существовавшие всего через 300 млн лет после Большого взрыва. Они
+								оказались неожиданно массивными и яркими, что ставит под сомнение
+								текущие модели.
+							</li>
+							<li style="margin-bottom: 10px">
+								<strong>Атмосферы экзопланет:</strong> Телескоп впервые детально
+								проанализировал состав атмосферы планеты WASP-39b, обнаружив там
+								углекислый газ.
+							</li>
+							<li>
+								<strong>Звёздные ясли:</strong> Снимки туманности Киля и Столпов
+								Творения показали процесс рождения звезд с невиданной ранее
+								детализацией.
+							</li>
+						</ul>
 					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Можно ли отремонтировать JWST?</summary>
+							<p>
+								В отличие от Хаббла, Уэбб находится слишком далеко для сервисных
+								миссий. Он спроектирован так, чтобы работать автономно без ремонта.
+								Однако у него есть стыковочное кольцо для возможной роботизированной
+								дозаправки в будущем.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Почему снимки цветные?</summary>
+							<p>
+								Инфракрасный свет невидим для человеческого глаза. Ученые
+								присваивают разным длинам волн ИК-излучения видимые цвета (синий для
+								коротких, красный для длинных), чтобы мы могли увидеть структуру
+								объектов.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Сколько проработает телескоп?</summary>
+							<p>
+								Изначально миссия рассчитывалась на 5-10 лет. Однако благодаря
+								идеальному запуску ракеты Ariane 5 удалось сэкономить много топлива.
+								Теперь ожидается, что Уэбб сможет работать более 20 лет.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
@@ -296,7 +381,7 @@
 						<a class="footer__link" href="../index.html">Главная</a>
 						<a class="footer__link" href="../planets/">Планеты</a>
 						<a class="footer__link" href="../stars/">Звёзды</a>
-						<a class="footer__link" href="../galaxies/">ГАЛАКТИКИ</a>
+						<a class="footer__link" href="../galaxies/">Галактики</a>
 						<a class="footer__link" href="../blackholes/">Чёрные дыры</a>
 						<a class="footer__link" href="../exploration/">Исследование</a>
 						<a class="footer__link" href="../about.html">О проекте</a>
