--- a/exploration/voyager.html
+++ b/exploration/voyager.html
@@ -172,9 +172,7 @@
 		<main>
 			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
-				<span class="breadcrumbs__separator">/</span>
 				<a class="breadcrumbs__link u-url" href="../exploration/">Исследование</a>
-				<span class="breadcrumbs__separator">/</span>
 				<span class="breadcrumbs__current p-name">Voyager</span>
 			</nav>
 			<section class="hero" aria-label="Voyager">
@@ -190,7 +188,10 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
+					<h1
+						class="hero__title animate-fade-in"
+						style="animation-delay: 300ms; color: #4a90e2"
+					>
 						VOYAGER
 					</h1>
 					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
@@ -199,30 +200,66 @@
 				</div>
 			</section>
 
-			<!-- Обзор -->
+			<!-- Гранд-тур -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">МИССИИ</span>
-						<h2 class="section__title">Два зонда, одна цель</h2>
+						<span class="section__tag">МИССИЯ</span>
+						<h2 class="section__title">Гранд-тур</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							В 1977 году NASA запустило зонды <strong>Voyager 1</strong> и
-							<strong>Voyager 2</strong> для исследования внешних планет. Они
-							пролетели мимо Юпитера, Сатурна, Урана и Нептуна, отправив уникальные
-							снимки и данные о магнитных полях и атмосферах.
+							В конце 1970-х планеты-гиганты выстроились в редкий парад, который
+							происходит раз в 176 лет. Это позволило NASA использовать гравитационные
+							маневры, чтобы одним зондом облететь Юпитер, Сатурн, Уран и Нептун,
+							сократив время полета с 40 до 12 лет.
 						</p>
 						<p>
-							Сейчас Voyager 1 находится в межзвёздной среде, за границей гелиосферы,
-							и продолжает измерять космические лучи и магнитное поле. На борту
-							каждого зонда находится "золотая пластинка" с образцами звуков и
-							изображений Земли.
+							Зонды <strong>Voyager 1</strong> и <strong>Voyager 2</strong>,
+							запущенные в 1977 году, стали самыми успешными автоматическими станциями
+							в истории. Они впервые показали нам вулканы на Ио, ледяную поверхность
+							Европы, сложные кольца Сатурна и синие штормы Нептуна.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- Технологии -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ИНЖЕНЕРИЯ</span>
+						<h2 class="section__title">Технологии 70-х</h2>
+					</div>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Энергия</h3>
+							<p class="text-card__desc">
+								Солнечные панели там бесполезны. Вояджеры питаются от радиоизотопных
+								термоэлектрических генераторов (РИТЭГ) на плутонии-238. Их мощность
+								падает каждый год.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Память</h3>
+							<p class="text-card__desc">
+								Компьютеры зондов имеют в тысячи раз меньше памяти, чем современный
+								смартфон. Данные записывались на магнитную ленту перед отправкой на
+								Землю.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Связь</h3>
+							<p class="text-card__desc">
+								Сигнал от Вояджера 1 идет до Земли более 22 часов. Мы слышим его
+								"шепот" мощностью 20 ватт с помощью гигантских антенн Deep Space
+								Network.
+							</p>
+						</article>
+					</div>
 				</div>
 			</section>
 
@@ -238,18 +275,78 @@
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							На борту каждого «Вояджера» закреплена позолоченная медная пластинка —
-							послание для внеземных цивилизаций. Она содержит 115 изображений, звуки
-							природы (ветер, гром, пение птиц), музыку разных культур (от Баха до
-							Чака Берри) и приветствия на 55 языках.
+							На борту каждого зонда закреплен позолоченный медный диск — послание для
+							внеземных цивилизаций. Он содержит 115 изображений, звуки природы
+							(ветер, гром, киты), музыку (от Баха до Чака Берри) и приветствия на 55
+							языках.
 						</p>
 						<p>
-							На футляре диска выгравирована схема расположения Солнца относительно
-							пульсаров и инструкция по воспроизведению записи. Пластинка рассчитана
-							на сохранение информации в течение миллиарда лет, являясь своеобразной
-							«капсулой времени» человечества.
+							Пластинка рассчитана на миллиард лет сохранности. Даже если человечество
+							исчезнет, этот артефакт останется доказательством того, что мы
+							существовали и стремились к звездам.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- Межзвездная среда -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ГРАНИЦА</span>
+						<h2 class="section__title">Pale Blue Dot</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							В 1990 году, по просьбе Карла Сагана, Вояджер 1 развернулся и сделал
+							снимок Земли с расстояния 6 млрд км. Наша планета выглядит как крошечная
+							"бледно-голубая точка" в луче солнечного света.
+						</p>
+						<p>
+							В 2012 году Вояджер 1 первым в истории вышел в межзвездное пространство,
+							пересекли гелиопаузу — границу, где солнечный ветер сталкивается с
+							межзвездной плазмой.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Когда Вояджеры отключатся?</summary>
+							<p>
+								Инженеры NASA постепенно отключают научные приборы, чтобы сэкономить
+								энергию. Ожидается, что зонды смогут передавать данные примерно до
+								2025-2030 года. После этого они станут "мертвыми" странниками.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Долетят ли они до других звезд?</summary>
+							<p>
+								Вояджер 1 направляется в сторону созвездия Змееносца. Через 40 000
+								лет он пролетит в 1.6 световых года от звезды Глизе 445. Это
+								путешествие займет эоны лет.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Можно ли их догнать?</summary>
+							<p>
+								Теоретически да, с помощью современных технологий (например, ионных
+								двигателей), но таких миссий не планируется. Вояджеры слишком быстры
+								и находятся слишком далеко, чтобы это имело практический смысл.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
