--- a/galaxies/andromeda.html
+++ b/galaxies/andromeda.html
@@ -258,6 +258,171 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ИСТОРИЯ</span>
+						<h2 class="section__title">От древности до наших дней</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Первые упоминания туманности Андромеды встречаются в арабских
+							астрономических трактатах X века. Аль-Суфи описал её как "маленькое
+							облако" в созвездии Андромеды. В европейской астрономии объект был
+							каталогизирован Симоном Мариусом в 1612 году, который первым наблюдал
+							его в телескоп.
+						</p>
+						<p style="margin-bottom: 16px">
+							Революционное открытие произошло в 1923 году, когда Эдвин Хаббл с
+							помощью 100-дюймового телескопа в обсерватории Маунт-Вилсон обнаружил в
+							M31 цефеиды — переменные звёзды, позволившие точно измерить расстояние.
+							Это доказало, что Андромеда находится далеко за пределами Млечного Пути,
+							установив существование других галактик.
+						</p>
+						<p>
+							Современные исследования с помощью космического телескопа "Хаббл" и
+							инфракрасных обсерваторий раскрыли детальную структуру галактики. В 2012
+							году астрономы создали наиболее подробное изображение Андромеды,
+							охватывающее более 100 миллионов звёзд в её спиральных рукавах.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">СТРУКТУРА</span>
+						<h2 class="section__title">Архитектура гиганта</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Андромеда — классическая спиральная галактика с перемычкой типа Sb. Её
+							спиральные рукава богаты молодыми горячими звёздами и областями
+							звездообразования. В отличие от Млечного Пути, рукава Андромеды более
+							плотно намотаны и чётко выражены.
+						</p>
+						<p style="margin-bottom: 16px">
+							Центральное ядро галактики содержит двойную структуру — редкое явление
+							для спиральных галактик. Внутреннее ядро окружено скоплением старых
+							звёзд, вращающихся вокруг сверхмассивной чёрной дыры массой около 140
+							миллионов солнечных масс.
+						</p>
+						<p>
+							Гало Андромеды простирается гораздо дальше видимого диска и содержит
+							множество шаровых скоплений и звёздных потоков — остатков поглощённых
+							карликовых галактик. Недавние исследования показали, что гало Андромеды
+							в 6 раз больше, чем предполагалось ранее.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">СПУТНИКИ</span>
+						<h2 class="section__title">Семейство галактик</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Андромеда имеет не менее 14 известных галактик-спутников, самые крупные
+							из которых — M32 и M110. M32 — компактная эллиптическая галактика,
+							пережившая близкое прохождение через центр Андромеды около 2 миллиардов
+							лет назад, что лишило её внешних звёзд.
+						</p>
+						<p style="margin-bottom: 16px">
+							M110 — более размытая эллиптическая галактика с активным
+							звездообразованием в своих центральных регионах. Остальные спутники — в
+							основном карликовые сферические галактики, содержащие от нескольких
+							тысяч до нескольких миллионов звёзд.
+						</p>
+						<p>
+							Эти спутники играют ключевую роль в эволюции Андромеды, поставляя
+							материал для роста галактики через приливные взаимодействия. Некоторые
+							из них, вероятно, будут полностью поглощены Андромедой в ближайшие
+							миллиарды лет.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">НАБЛЮДЕНИЯ</span>
+						<h2 class="section__title">Как увидеть Андромеду</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Андромеда — самый далёкий объект, видимый невооружённым глазом. В тёмную
+							ясную ночь она выглядит как тусклое размытое пятно размером с Луну.
+							Лучшее время для наблюдений — октябрь-ноябрь, когда галактика находится
+							высоко над горизонтом.
+						</p>
+						<p style="margin-bottom: 16px">
+							Для детального рассмотрения понадобится бинокль или небольшой телескоп.
+							В бинокль 7×50 или 10×50 уже видна вытянутая форма галактики. Телескоп с
+							апертурой 80 мм и более позволяет различить яркое ядро и слабые
+							очертания спиральных рукавов.
+						</p>
+						<p>
+							Фотография Андромеды требует длинных экспозиций и экваториальной
+							монтировки. Даже с любительским оборудованием можно получить
+							впечатляющие изображения, показывающие детали структуры и цветовые
+							различия в звёздных населениях.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Когда точно произойдёт столкновение с Млечным Путём?</summary>
+							<p>
+								Первое сближение начнётся через 4.5 миллиарда лет, но полное слияние
+								займёт ещё около 2 миллиардов лет. К 7 миллиардам лет отныне обе
+								галактики превратятся в единую эллиптическую систему.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Можно ли будет увидеть это столкновение с Земли?</summary>
+							<p>
+								К тому времени Солнце станет красным гигантом, и Земля, вероятно,
+								станет негодной для жизни. Но если человечество выживет и
+								переберётся на другие планеты, ночное небо будет незабываемым
+								зрелищем.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>
+								Почему Андромеда кажется больше Млечного Пути, хотя мы в центре?
+							</summary>
+							<p>
+								Андромеда действительно больше по количеству звёзд, но мы видим её
+								под углом около 15 градусов, что делает её видимый размер меньше
+								реального. Млечный Путь кажется нам огромным, потому что мы внутри
+								него.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+							<summary>Есть ли в Андромеде планеты и потенциально жизнь?</summary>
+							<p>
+								С высокой вероятностью да. При триллионе звёзд статистически должны
+								быть миллиарды планет. Однако возраст звёзд в Андромеде в среднем
+								старше, что может влиять на условия для развития жизни.
+							</p>
+						</details>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
