--- a/galaxies/milky-way.html
+++ b/galaxies/milky-way.html
@@ -185,18 +185,47 @@
 					</div>
 					<article class="animate-fade-in" style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
-							<strong>Млечный Путь</strong> — это спиральная галактика с перемычкой,
-							диаметр которой составляет около 100 000 световых лет. Она содержит от
-							200 до 400 миллиардов звезд, включая наше Солнце. Если посмотреть на
-							галактику сбоку, она напоминает плоский диск с утолщением в центре
-							(балджем).
-						</p>
-						<p>
-							Наша Солнечная система находится в рукаве Ориона, примерно в 26 000
-							световых лет от центра. Мы совершаем один оборот вокруг центра галактики
-							за 225-250 миллионов лет — этот период называется галактическим годом.
+							<strong>Млечный Путь</strong> относится к типу SBc — спиральные
+							галактики с перемычкой и свободно закрученными рукавами. Масса галактики
+							оценивается в 1-1.5 триллиона масс Солнца, причём около 85-90% этой
+							массы приходится на тёмную материю, которая формирует гало и
+							обеспечивает гравитационную стабильность всей структуры.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">СТРУКТУРА</span>
+						<h2 class="section__title">Компоненты галактики</h2>
+					</div>
+					<div class="text-cards">
+						<div class="text-card">
+							<h3 class="text-card__title">Звёздный диск</h3>
+							<p class="text-card__desc">
+								Основное место рождения новых звёзд. Здесь сосредоточены газ, пыль и
+								молодые горячие светила. Толщина диска составляет около 1000
+								световых лет.
+							</p>
+						</div>
+						<div class="text-card">
+							<h3 class="text-card__title">Гало</h3>
+							<p class="text-card__desc">
+								Сферическая область вокруг диска, содержащая древние шаровые
+								скопления и тёмную материю. Радиус гало достигает 200 000 световых
+								лет.
+							</p>
+						</div>
+						<div class="text-card">
+							<h3 class="text-card__title">Балдж</h3>
+							<p class="text-card__desc">
+								Центральное вздутие, плотно населённое старыми звёздами. Место
+								высокой плотности материи и сверхмассивной чёрной дыры Стрелец A*.
+							</p>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -225,31 +254,185 @@
 			<section class="section">
 				<div class="container">
 					<div class="section__header">
-						<span class="section__tag">КОМПОНЕНТЫ</span>
-						<h2 class="section__title">Из чего состоит галактика</h2>
+						<span class="section__tag">ИСТОРИЯ</span>
+						<h2 class="section__title">От мифов к науке</h2>
 					</div>
-					<div class="text-cards">
-						<div class="text-card">
-							<h3 class="text-card__title">Звёздный диск</h3>
-							<p class="text-card__desc">
-								Основное место рождения новых звезд. Здесь сосредоточены газ, пыль и
-								молодые горячие светила.
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Древние греки видели Млечный Путь как разлитое по небу молоко — отсюда и
+							название "галактика" (от греческого "galaktikos" — молочный). Аристотель
+							считал его атмосферным явлением, а Демокрит предположил, что это
+							скопление далёких звёзд.
+						</p>
+						<p style="margin-bottom: 16px">
+							Революция произошла в 1610 году, когда Галилео Галилей направил на
+							Млечный Путь свой телескоп и увидел, что он состоит из множества
+							отдельных звёзд. В XVIII веке Иммануил Кант и Томас Райт предположили,
+							что мы живём внутри огромного диска из звёзд.
+						</p>
+						<p style="margin-bottom: 16px">
+							Определение размеров и структуры Млечного Пути стало возможным только в
+							XX веке. Харлоу Шепли измерил расстояния до шаровых скоплений и
+							определил, что Солнце находится далеко от центра галактики. Эдвин Хаббл
+							в 1924 году доказал, что туманности Андромеды — это отдельная галактика,
+							установив масштаб Вселенной.
+						</p>
+						<p>
+							Современные исследования используют инфракрасную астрономию для
+							наблюдения сквозь пыль диска. Телескопы Spitzer и WISE создали подробные
+							карты структуры Млечного Пути, а миссия Gaia измеряет положения и
+							движения миллиардов звёзд, позволяя построить трёхмерную модель нашей
+							галактики.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ЭВОЛЮЦИЯ</span>
+						<h2 class="section__title">Формирование и развитие</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Млечный Путь начал формироваться примерно 13.6 миллиардов лет назад,
+							всего через 200 миллионов лет после Большого взрыва. Первые звёзды
+							(популяция III) были массивными и короткоживущими, они обогатили
+							межзвёздную среду тяжёлыми элементами.
+						</p>
+						<p style="margin-bottom: 16px">
+							Галактика росла через аккрецию меньших галактик-спутников. Сегодня
+							Млечный Путь продолжает поглощать карликовые галактики: карликовую
+							сферическую в Стрельце, Большую и Малую Магеллановы Облака. Эти
+							столкновения создают звёздные потоки — остатки разорванных галактик,
+							которые можно наблюдать в гало.
+						</p>
+						<p style="margin-bottom: 16px">
+							Звездообразование в Млечном Пути не было равномерным. Пики активности
+							происходили 8-10 миллиардов лет назад и продолжаются сегодня в
+							спиральных рукавах. Скорость звездообразования составляет около 1-2
+							солнечных масс в год.
+						</p>
+						<p>
+							Будущее Млечного Пути тесно связано с соседней галактикой Андромеды.
+							Через 4.5 миллиардов лет галактики столкнутся и сольются в одну
+							эллиптическую галактику, которую астрономы уже называют "Млекдромедой".
+							Это событие кардинально изменит структуру обеих галактик.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">НАУЧНЫЕ СПОРЫ</span>
+						<h2 class="section__title">Открытые вопросы</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Одна из главных загадок — природа тёмной материи. Хотя она составляет
+							большую часть массы галактики, её частицы до сих пор не обнаружены.
+							Альтернативные теории модифицированной гравитации пытаются объяснить
+							наблюдаемые эффекты без тёмной материи.
+						</p>
+						<p style="margin-bottom: 16px">
+							Спор продолжается о точной структуре спиральных рукавов. Некоторые
+							учёные считают их плотностными волнами, другие — материальными
+							структурами. Наблюдения с телескопа Gaia помогают разрешить этот вопрос,
+							но полной ясности пока нет.
+						</p>
+						<p style="margin-bottom: 16px">
+							Неясна и роль центральной чёрной дыры в эволюции галактики. Активные
+							галактики показывают, что чёрные дыры могут регулировать
+							звездообразование, но в Млечном Пути Стрелец A* слишком слаб для такого
+							влияния. Вопрос, была ли он активен в прошлом, остаётся открытым.
+						</p>
+						<p>
+							Дискуссии ведутся и о количестве карликовых галактик-спутников. Теории
+							предсказывают сотни таких объектов, но наблюдено лишь несколько
+							десятков. Это "проблема отсутствующих спутников" — одно из ключевых
+							противоречий между теорией и наблюдениями в современной космологии.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">БУДУЩЕЕ</span>
+						<h2 class="section__title">Столкновение с Андромедой</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Галактика Андромеды (M31) приближается к Млечному Пути со скоростью 110
+							км/с. Через 4.5 миллиардов лет начнётся их гравитационное
+							взаимодействие, которое продлится несколько миллиардов лет.
+						</p>
+						<p style="margin-bottom: 16px">
+							Несмотря на драматическое название "столкновения", прямые столкновения
+							звёзд маловероятны из-за огромных расстояний между ними. Однако
+							гравитационные силы исказят структуры обеих галактик, выбрасывая звёзды
+							в приливные хвосты.
+						</p>
+						<p style="margin-bottom: 16px">
+							Через 6 миллиардов лет галактики сольются в одну эллиптическую
+							галактику. Солнечная система, скорее всего, будет выброшена на внешнюю
+							орбиту или покинет объединённую систему. К этому времени Солнце станет
+							красным гигантом и поглотит внутренние планеты.
+						</p>
+						<p>
+							Объединённая галактика будет содержать около триллиона звёзд и станет
+							доминирующей структурой в Местной группе. Этот процесс демонстрирует,
+							что галактики — динамические системы, постоянно эволюционирующие через
+							слияния и взаимодействия.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Можно ли увидеть Млечный Путь невооружённым глазом?</summary>
+							<p>
+								Да, в тёмном месте вдали от городской засветки Млечный Путь виден
+								как светящаяся полоса через всё небо. Лучшее время для наблюдений —
+								летние ночи в северном полушарии.
 							</p>
-						</div>
-						<div class="text-card">
-							<h3 class="text-card__title">Гало</h3>
-							<p class="text-card__desc">
-								Сферическая область вокруг диска, содержащая древние шаровые
-								скопления и темную материю.
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>
+								Сколько времени занимает свет от центра галактики до Земли?
+							</summary>
+							<p>
+								Свет от центра Млечного Пути доходит до нас примерно за 26 000 лет.
+								Мы видим центр галактики таким, каким он был 26 тысяч лет назад.
 							</p>
-						</div>
-						<div class="text-card">
-							<h3 class="text-card__title">Балдж</h3>
-							<p class="text-card__desc">
-								Центральное вздутие, плотно населенное старыми звездами. Место
-								высокой плотности материи.
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Поглотит ли Стрелец A* нашу Солнечную систему?</summary>
+							<p>
+								Нет, Солнечная система находится на безопасном расстоянии 26 000
+								световых лет от центра. Даже если бы мы были ближе, чёрная дыра
+								Стрельца A* слишком мала, чтобы поглотить звёзды на таких орбитах.
 							</p>
-						</div>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+							<summary>Какую форму имеет Млечный Путь на самом деле?</summary>
+							<p>
+								Млечный Путь — это спиральная галактика с перемычкой. Если смотреть
+								сверху, она напоминает вращающийся ураган с спиральными рукавами.
+								Сбоку она выглядит как тонкий диск с утолщением в центре.
+							</p>
+						</details>
 					</div>
 				</div>
 			</section>
