--- a/planets/jupiter.html
+++ b/planets/jupiter.html
@@ -206,15 +206,41 @@
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							<strong>Юпитер</strong> — пятая планета от Солнца и крупнейшая в
-							Солнечной системе. Его масса в 2,5 раза превышает суммарную массу всех
-							остальных планет. Юпитер состоит преимущественно из водорода и гелия, не
-							имея твёрдой поверхности в привычном понимании.
+							<strong>Юпитер</strong> — пятая планета от Солнца и абсолютный доминант
+							нашей системы. Его масса в 2,5 раза превышает суммарную массу всех
+							остальных планет. Если бы Юпитер был полой сферой, внутрь поместилось бы
+							более 1300 планет размером с Землю.
 						</p>
 						<p>
-							Планета обладает мощнейшим магнитным полем и вращается быстрее всех:
-							сутки здесь длятся менее 10 часов. Это быстрое вращение сплющивает
-							планету у полюсов и создаёт характерные полосы облаков.
+							Это не просто планета, а неудавшаяся звезда. Ему не хватило массы, чтобы
+							запустить термоядерные реакции, но он всё равно излучает в космос больше
+							тепла, чем получает от Солнца.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- Внутреннее строение -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">НЕДРА</span>
+						<h2 class="section__title">Океан металла</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Под облаками из аммиака и воды скрывается самая большая тайна Юпитера.
+							По мере погружения давление растет настолько, что водород сжимается в
+							жидкость. Еще глубже он превращается в
+							<strong>металлический водород</strong>
+							— экзотическое состояние вещества, проводящее электричество.
+						</p>
+						<p>
+							Именно этот гигантский вращающийся океан жидкого металла работает как
+							планетарная динамо-машина, генерируя чудовищное магнитное поле Юпитера.
 						</p>
 					</article>
 				</div>
@@ -233,13 +259,38 @@
 					>
 						<p style="margin-bottom: 16px">
 							Самый известный шторм Солнечной системы бушует на Юпитере уже более 350
-							лет. <strong>Великое Красное Пятно</strong> — это гигантский антициклон,
-							размером больше Земли, где скорость ветра превышает 400 км/ч.
+							лет. <strong>Великое Красное Пятно</strong> — это антициклон размером
+							больше нашей планеты. Скорость ветра на его краях достигает 430 км/ч.
 						</p>
 						<p>
-							В последние десятилетия пятно уменьшается в размерах, но становится выше
-							и ярче. Учёные продолжают наблюдать за его эволюцией с помощью телескопа
-							Hubble и зонда Juno.
+							Почему оно красное? Ученые полагают, что солнечный ультрафиолет
+							разрушает химические соединения (например, гидросульфид аммония) в
+							верхних слоях вихря, создавая характерный "загар".
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- Магнитосфера -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">МАГНИТОСФЕРА</span>
+						<h2 class="section__title">Радиационный ад</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Магнитное поле Юпитера в 20 000 раз мощнее земного. Оно простирается на
+							миллионы километров, достигая орбиты Сатурна. В этой ловушке разгоняются
+							заряженные частицы, создавая смертельные радиационные пояса.
+						</p>
+						<p>
+							Космический аппарат, попавший туда без защиты, "поджарится" за считанные
+							минуты. Зонд Juno вынужден нырять под радиационные пояса по вытянутой
+							орбите, чтобы выжить.
 						</p>
 					</article>
 				</div>
@@ -250,31 +301,94 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">СВИТА</span>
-						<h2 class="section__title">Галилеевы спутники</h2>
+						<h2 class="section__title">Империя лун</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
 							<h3 class="text-card__title">Ио</h3>
 							<p class="text-card__desc">
-								Самое вулканически активное тело в системе. Сотни вулканов постоянно
-								извергают серу из-за приливного разогрева.
+								Вулканический ад. Гравитация Юпитера и соседних лун буквально
+								сминает Ио, разогревая недра и вызывая постоянные извержения.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
 							<h3 class="text-card__title">Европа</h3>
 							<p class="text-card__desc">
-								Ледяной мир с глобальным океаном под корой. Одно из главных мест для
-								поиска внеземной жизни.
+								Ледяной мир, скрывающий глобальный соленый океан. Главный кандидат
+								на наличие внеземной жизни в Солнечной системе.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
 							<h3 class="text-card__title">Ганимед</h3>
 							<p class="text-card__desc">
-								Крупнейший спутник, больше планеты Меркурий. Единственный спутник с
-								собственным магнитным полем.
+								Крупнейший спутник в системе (больше Меркурия!). Единственная луна,
+								имеющая собственное магнитное поле.
 							</p>
-						</div>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<!-- Миссии -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
+						<h2 class="section__title">Посланники Земли</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Первыми Юпитер посетили <strong>Pioneer 10</strong> и
+							<strong>11</strong>, проложив путь через пояс астероидов. Затем
+							легендарные <strong>Voyager</strong>
+							открыли кольца Юпитера и вулканы на Ио.
+						</p>
+						<p>
+							Орбитальный аппарат <strong>Galileo</strong> сбросил зонд в атмосферу
+							планеты в 1995 году, передав данные о давлении и температуре, прежде чем
+							был раздавлен. Сейчас на орбите работает <strong>Juno (Юнона)</strong>,
+							раскрывая тайны гравитационного поля и воды в атмосфере.
+						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Можно ли высадиться на Юпитер?</summary>
+							<p>
+								Нет. У Юпитера нет твердой поверхности. Вы будете опускаться сквозь
+								газ, который становится плотнее и горячее, пока вас не раздавит
+								чудовищным давлением.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Защищает ли Юпитер Землю?</summary>
+							<p>
+								Спорный вопрос. Ранее считалось, что он "пылесосит" кометы, спасая
+								нас. Но компьютерные модели показывают, что своей гравитацией он
+								может как отбрасывать опасные объекты, так и направлять их во
+								внутреннюю часть системы.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Почему Юпитер не стал звездой?</summary>
+							<p>
+								Ему нужно быть в 80 раз массивнее, чтобы в ядре начался термоядерный
+								синтез водорода. Сейчас это просто очень большая планета.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
