--- a/planets/mars.html
+++ b/planets/mars.html
@@ -199,24 +199,21 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">ОБЗОР</span>
-						<h2 class="section__title">Четвертая планета от Солнца</h2>
+						<h2 class="section__title">Мир ржавчины</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							<strong>Марс</strong> — холодная пустынная планета с разреженной
-							атмосферой. Из-за оксида железа, покрывающего поверхность, он имеет
-							характерный красноватый оттенок. Марс наиболее похож на Землю среди всех
-							планет: здесь есть смена сезонов, полярные шапки, каньоны и потухшие
-							вулканы.
+							<strong>Марс</strong> — холодная пустыня, покрытая мелкой пылью оксида
+							железа (ржавчиной), что придает ей кроваво-красный оттенок. Атмосфера
+							здесь в 100 раз тоньше земной и состоит на 95% из углекислого газа.
 						</p>
 						<p>
-							У планеты два спутника — <strong>Фобос</strong> и
-							<strong>Деймос</strong>, которые, вероятно, являются захваченными
-							астероидами. Подробнее о спутниках можно узнать в разделе
-							<a class="text-link" href="../planets/">планеты Солнечной системы</a>.
+							Несмотря на суровость, Марс — самая похожая на Землю планета. Здесь есть
+							смена времен года, полярные шапки, облака, каньоны и древние русла рек,
+							говорящие о том, что когда-то здесь плескались океаны.
 						</p>
 					</article>
 				</div>
@@ -227,65 +224,61 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">ГЕОГРАФИЯ</span>
-						<h2 class="section__title">Рекордсмены Солнечной системы</h2>
+						<h2 class="section__title">Планета гигантов</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
-							<h3 class="text-card__title">Олимп (Olympus Mons)</h3>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Олимп</h3>
 							<p class="text-card__desc">
-								Самый высокий вулкан в Солнечной системе. Его высота составляет 21,9
-								км (в 2,5 раза выше Эвереста), а диаметр — около 600 км.
+								Потухший вулкан высотой 21.9 км — самая высокая гора в Солнечной
+								системе. Его основание по площади равно Франции.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
 							<h3 class="text-card__title">Долины Маринер</h3>
 							<p class="text-card__desc">
-								Гигантская система каньонов длиной 4500 км. Если наложить её на
-								карту США, она протянется от Нью-Йорка до Калифорнии.
+								Система каньонов длиной 4500 км и глубиной до 11 км. Если бы они
+								были на Земле, то простирались бы от Москвы до Лиссабона.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
-							<h3 class="text-card__title">Полярные шапки</h3>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Эллада</h3>
 							<p class="text-card__desc">
-								Состоят из водяного льда и замороженного углекислого газа («сухого
-								льда»). Зимой они растут, а летом отступают.
+								Огромная ударная равнина в южном полушарии, самая низкая точка
+								планеты (7 км ниже среднего уровня).
 							</p>
-						</div>
-					</article>
+						</article>
+					</div>
 				</div>
 			</section>
 
-			<!-- Миссии -->
+			<!-- Вода и Жизнь -->
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
-						<h2 class="section__title">Роботы на Марсе</h2>
+						<span class="section__tag">ПОИСК</span>
+						<h2 class="section__title">Была ли жизнь?</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
-							<div class="compare__head">Curiosity (2012)</div>
-							<ul class="compare__list">
-								<li>Ищет следы жизни в прошлом</li>
-								<li>Работает в кратере Гейл</li>
-								<li>Питание от РИТЭГ</li>
-								<li>Уже более 10 лет на службе</li>
-							</ul>
-						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
-							<div class="compare__head">Perseverance (2021)</div>
-							<ul class="compare__list">
-								<li>Собирает образцы грунта</li>
-								<li>Сопровождался вертолетом Ingenuity</li>
-								<li>Готовит грунт для возврата на Землю</li>
-								<li>Ищет древнюю микробную жизнь</li>
-							</ul>
-						</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Марсоходы Curiosity и Perseverance нашли неопровержимые доказательства
+							того, что миллиарды лет назад Марс был теплым и влажным. В кратере Езеро
+							когда-то было озеро и дельта реки.
+						</p>
+						<p style="margin-bottom: 16px">
+							Сейчас вода существует в основном в виде льда на полюсах и под
+							поверхностью. Однако в 2018 году радар обнаружил признаки жидкой воды
+							под ледяной шапкой на южном полюсе.
+						</p>
+						<p>
+							Ученые также фиксируют выбросы метана, которые могут быть признаком
+							геологической активности или даже деятельности древних микробов,
+							скрывающихся глубоко под землей.
+						</p>
 					</article>
-					<p style="margin-top: 24px; text-align: center; color: var(--fg-dim)">
-						Больше об истории космических полетов читайте в статье
-						<a class="text-link" href="../exploration/">исследование космоса</a>.
-					</p>
 				</div>
 			</section>
 
@@ -294,26 +287,58 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">БУДУЩЕЕ</span>
-						<h2 class="section__title">Перспективы колонизации</h2>
+						<h2 class="section__title">Вторая Земля?</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							<strong>Колонизация Марса</strong> — одна из главных целей современной
-							космонавтики. Исследования показывают, что в далеком прошлом планета
-							была теплее и влажнее, имела плотную атмосферу и океаны. Сегодня ученые
-							ищут признаки жизни в подповерхностных слоях грунта и полярных шапках.
+							Илон Маск и SpaceX планируют отправить людей на Марс в ближайшие
+							десятилетия с помощью корабля Starship. Главные проблемы: радиация,
+							токсичная пыль (перхлораты) и слабая гравитация (38% от земной).
 						</p>
 						<p>
-							Основные вызовы для будущих колонистов — это высокая радиация, низкая
-							гравитация и токсичный грунт. Однако наличие воды в виде льда дает
-							надежду на возможность автономного существования баз. Технологии
-							получения кислорода из атмосферы (эксперимент MOXIE) уже успешно
-							испытаны.
+							Первые базы, вероятно, будут построены в лавовых трубках (пещерах) для
+							защиты от радиации. Воду и кислород планируют добывать из местного льда
+							и атмосферы (технология MOXIE уже проверена).
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Сколько лететь до Марса?</summary>
+							<p>
+								При текущих технологиях полет занимает от 6 до 9 месяцев. Окно для
+								запуска открывается каждые 26 месяцев, когда планеты сближаются.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Почему Марс красный?</summary>
+							<p>
+								Поверхность покрыта пылью, богатой оксидом железа (Fe₂O₃). По сути,
+								это обычная ржавчина. Небо днем имеет розоватый оттенок из-за
+								взвешенной пыли, а закаты на Марсе — голубые.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Можно ли там дышать?</summary>
+							<p>
+								Нет. Атмосфера слишком разреженная и состоит из углекислого газа.
+								Человек без скафандра потеряет сознание за несколько секунд и
+								погибнет от гипоксии и закипания жидкостей в организме (эбуллизм).
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
@@ -337,7 +362,7 @@
 						class="info-band__link"
 						target="_blank"
 						rel="noopener"
-						href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fseo.belstu.by%2FPupko%2Fplanets%2Fmars.html&text=%D0%9C%D0%B0%D1%80%D1%81%3A%20%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%B0%D1%8F%20%D0%BF%D0%BB%D0%B0%D0%BD%D0%B5%D1%82%D0%B0"
+						href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fseo.belstu.by%2FPupko%2Fplanets%2Fmars.html&text=%D0%9C%D0%B0%D1%80%D1%81"
 						>X</a
 					>
 					<a
