--- a/stars/betelgeuse.html
+++ b/stars/betelgeuse.html
@@ -204,22 +204,53 @@
 			<section class="section">
 				<div class="container">
 					<div class="section__header animate-fade-down">
-						<span class="section__tag">ОРИОН</span>
-						<h2 class="section__title">Яркая звезда в плече охотника</h2>
+						<span class="section__tag">ОБЗОР</span>
+						<h2 class="section__title">Плечо Ориона</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							<strong>Бетельгейзе</strong> — полуправильная переменная звезда, одна из
-							ярчайших на ночном небе. Если поместить её в центр Солнечной системы, её
-							поверхность поглотила бы орбиту Юпитера.
+							<strong>Бетельгейзе</strong> — это альфа созвездия Орион, хотя часто
+							уступает в яркости Ригелю (бете Ориона). Это красный сверхгигант,
+							который находится на финальной стадии своей жизни.
+						</p>
+						<p style="margin-bottom: 16px">
+							Звезда настолько огромна, что если поместить её в центр Солнечной
+							системы, её фотосфера поглотила бы Меркурий, Венеру, Землю, Марс и
+							достигла бы орбиты Юпитера. Её радиус в 764 раза больше солнечного.
 						</p>
 						<p>
-							Звезда находится на финальной стадии своей эволюции. Она уже исчерпала
-							водород в ядре и сейчас сжигает гелий и более тяжёлые элементы,
-							пульсируя и выбрасывая огромные облака пыли в окружающее пространство.
+							Расстояние до звезды оценивается примерно в 640 световых лет, что делает
+							её ближайшим к Земле кандидатом в сверхновые.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- Великое потемнение -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">СОБЫТИЕ</span>
+						<h2 class="section__title">Великое потемнение</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							В конце 2019 года астрономы заметили нечто странное: яркость Бетельгейзе
+							начала стремительно падать. К февралю 2020 года она достигла
+							исторического минимума, потеряв около 60% своего блеска. Многие решили,
+							что это предвестник взрыва.
+						</p>
+						<p>
+							Однако исследования показали, что причиной стал гигантский выброс
+							плазмы. Остыв, вещество превратилось в облако пыли, которое временно
+							заслонило свет звезды для земных наблюдателей. Сейчас яркость звезды
+							восстановилась и даже немного превышает норму.
 						</p>
 					</article>
 				</div>
@@ -237,17 +268,56 @@
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							Астрономы ожидают, что Бетельгейзе взорвётся как сверхновая II типа в
-							течение ближайших 100 000 лет. Взрыв будет настолько ярким, что звезду
-							можно будет видеть днём, а ночью она будет отбрасывать тени, как полная
-							Луна.
+							Бетельгейзе обречена. Она уже сожгла водород в своем ядре и перешла к
+							синтезу более тяжелых элементов: гелия, углерода, неона. Когда ядро
+							превратится в железо, термоядерные реакции остановятся, и звезда
+							коллапсирует под собственным весом, взорвавшись как
+							<strong>сверхновая II типа</strong>.
 						</p>
 						<p>
-							В конце 2019 года произошло «Великое потемнение», когда яркость звезды
-							упала в 3 раза. Оказалось, что это было вызвано не скорым взрывом, а
-							выбросом пылевого облака, заслонившего свет звезды.
+							Это произойдет в ближайшие 100 000 лет (а возможно, уже случилось, но
+							свет еще не дошел до нас). Вспышка будет сравнима по яркости с полной
+							Луной и будет видна даже днем в течение нескольких месяцев. Для Земли
+							это событие безопасно — мы находимся слишком далеко, чтобы радиация
+							причинила вред.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Опасно ли это для нас?</summary>
+							<p>
+								Нет. "Зона поражения" сверхновой составляет около 50 световых лет.
+								Бетельгейзе находится более чем в 10 раз дальше. Мы получим лишь
+								красивое световое шоу и поток нейтрино.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Что останется после взрыва?</summary>
+							<p>
+								Скорее всего, образуется нейтронная звезда массой около 1.5
+								солнечных. Окружать её будет красивая расширяющаяся туманность
+								(остаток сверхновой), похожая на Крабовидную туманность.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Как найти Бетельгейзе на небе?</summary>
+							<p>
+								Найдите три звезды Пояса Ориона. Бетельгейзе — это яркая
+								красновато-оранжевая звезда выше и левее пояса (в северном
+								полушарии), обозначающая правое плечо охотника.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
@@ -302,7 +372,7 @@
 						<a class="footer__link" href="../index.html">Главная</a>
 						<a class="footer__link" href="../planets/">Планеты</a>
 						<a class="footer__link" href="../stars/">Звёзды</a>
-						<a class="footer__link" href="../galaxies/">ГАЛАКТИКИ</a>
+						<a class="footer__link" href="../galaxies/">Галактики</a>
 						<a class="footer__link" href="../blackholes/">Чёрные дыры</a>
 						<a class="footer__link" href="../exploration/">Исследование</a>
 						<a class="footer__link" href="../about.html">О проекте</a>
