--- a/stars/sun.html
+++ b/stars/sun.html
@@ -204,15 +204,14 @@
 					>
 						<p style="margin-bottom: 16px">
 							<strong>Солнце</strong> — это желтый карлик спектрального класса G2V,
-							вокруг которого вращаются все планеты нашей системы. Оно составляет
-							99.86% всей массы Солнечной системы. Энергия Солнца поддерживает жизнь
-							на Земле, управляя климатом и погодой.
+							идеальная сфера раскаленной плазмы. Оно составляет 99.86% всей массы
+							Солнечной системы — настолько оно огромно по сравнению с планетами.
 						</p>
 						<p>
 							В ядре звезды каждую секунду 600 миллионов тонн водорода превращаются в
-							гелий в процессе термоядерного синтеза, выделяя колоссальное количество
-							энергии. Узнать больше о жизненном цикле таких звезд можно в разделе
-							<a class="text-link" href="../stars/">звёзды и эволюция</a>.
+							гелий в процессе термоядерного синтеза. Эта энергия в виде света и тепла
+							поддерживает жизнь на Земле, управляя климатом, погодой и океанскими
+							течениями.
 						</p>
 					</article>
 				</div>
@@ -225,32 +224,29 @@
 						<span class="section__tag">СТРОЕНИЕ</span>
 						<h2 class="section__title">Слои Солнца</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
-							<div class="compare__head">Ядро</div>
-							<ul class="compare__list">
-								<li>Температура: 15 млн °C</li>
-								<li>Зона термоядерных реакций</li>
-								<li>Плотность в 150 раз выше воды</li>
-							</ul>
-						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
-							<div class="compare__head">Фотосфера</div>
-							<ul class="compare__list">
-								<li>Видимая поверхность</li>
-								<li>Температура: ~5500 °C</li>
-								<li>Здесь появляются солнечные пятна</li>
-							</ul>
-						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 300ms">
-							<div class="compare__head">Корона</div>
-							<ul class="compare__list">
-								<li>Внешняя атмосфера</li>
-								<li>Температура: 1-2 млн °C</li>
-								<li>Видна во время затмений</li>
-							</ul>
-						</div>
-					</article>
+					<div class="text-cards">
+						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+							<h3 class="text-card__title">Ядро</h3>
+							<p class="text-card__desc">
+								Зона термоядерных реакций. Температура здесь достигает 15 миллионов
+								градусов, а давление в 265 миллиардов раз выше земного атмосферного.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+							<h3 class="text-card__title">Лучистая зона</h3>
+							<p class="text-card__desc">
+								Слой, где энергия передается фотонами. Свету может потребоваться до
+								170 000 лет, чтобы выбраться из этого "лабиринта" к поверхности.
+							</p>
+						</article>
+						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+							<h3 class="text-card__title">Фотосфера</h3>
+							<p class="text-card__desc">
+								Видимая поверхность Солнца. Температура здесь падает до "всего"
+								5500°C. Именно этот слой излучает свет, который мы видим.
+							</p>
+						</article>
+					</div>
 				</div>
 			</section>
 
@@ -259,52 +255,117 @@
 				<div class="container">
 					<div class="section__header animate-fade-down">
 						<span class="section__tag">АКТИВНОСТЬ</span>
-						<h2 class="section__title">Солнечные бури</h2>
-					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
-							<h3 class="text-card__title">Солнечные пятна</h3>
-							<p class="text-card__desc">
-								Более холодные участки фотосферы, возникающие из-за сильных
-								магнитных полей. Их количество меняется в течение 11-летнего цикла.
-							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
-							<h3 class="text-card__title">Вспышки и выбросы</h3>
-							<p class="text-card__desc">
-								Мощные взрывы, выбрасывающие плазму и излучение. Достигая Земли, они
-								вызывают полярные сияния и могут нарушать радиосвязь.
-							</p>
-						</div>
-					</article>
-				</div>
-			</section>
-
-			<!-- Эволюция -->
-			<section class="section">
-				<div class="container">
-					<div class="section__header animate-fade-down">
-						<span class="section__tag">ЭВОЛЮЦИЯ</span>
-						<h2 class="section__title">Будущее звезды</h2>
+						<h2 class="section__title">Космическая погода</h2>
 					</div>
 					<article
 						class="animate-fade-in"
 						style="animation-delay: 200ms; color: var(--fg-dim)"
 					>
 						<p style="margin-bottom: 16px">
-							<strong>Солнечный ветер</strong> — поток ионизированных частиц,
-							истекающий из солнечной короны со скоростью 300—1200 км/с. Он формирует
-							гелиосферу, защищающую нашу систему от межзвездного газа, и вызывает
-							полярные сияния на планетах с магнитосферой.
+							Солнце — это не спокойный шар, а бурлящий котел. Его магнитное поле
+							меняется каждые 11 лет (цикл Швабе), вызывая появление пятен, вспышек и
+							корональных выбросов массы.
+						</p>
+						<p style="margin-bottom: 16px">
+							В периоды максимума активности на Солнце часто происходят мощные взрывы.
+							Если выброс направлен в сторону Земли, он вызывает геомагнитные бури,
+							которые могут повредить спутники, электросети и создать яркие полярные
+							сияния.
 						</p>
 						<p>
-							Через 4-5 миллиардов лет Солнце исчерпает запасы водорода и начнет
-							расширяться, превращаясь в <strong>красный гигант</strong>. В этом
-							процессе оно поглотит Меркурий и Венеру, а Земля станет непригодной для
-							жизни. В финале жизненного пути Солнце сбросит внешние оболочки и станет
-							плотным белым карликом.
+							Особый интерес представляет <strong>Минимум Маундера</strong> (1645–1715
+							гг.) — период, когда пятен на Солнце почти не было. Это совпало с "Малым
+							ледниковым периодом" в Европе, что намекает на связь солнечной
+							активности и климата.
 						</p>
 					</article>
+				</div>
+			</section>
+
+			<!-- Миссии -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
+						<h2 class="section__title">Прикоснуться к звезде</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Изучать Солнце сложно из-за жара и радиации. Однако зонд NASA
+							<strong>Parker Solar Probe</strong> совершил невозможное — он буквально
+							"нырнул" в атмосферу звезды (корону).
+						</p>
+						<p>
+							Защищенный щитом из углеродного композита толщиной 11 см, аппарат
+							выдерживает температуру более 1300°C, пролетая на рекордной скорости 700
+							000 км/ч. Он помогает понять, почему корона Солнца горячее его
+							поверхности.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- Затмения -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">ФЕНОМЕН</span>
+						<h2 class="section__title">Солнечные затмения</h2>
+					</div>
+					<article
+						class="animate-fade-in"
+						style="animation-delay: 200ms; color: var(--fg-dim)"
+					>
+						<p style="margin-bottom: 16px">
+							Нам повезло с космическим совпадением: Солнце в 400 раз больше Луны, но
+							оно также в 400 раз дальше. Поэтому на небе их диски кажутся
+							одинаковыми.
+						</p>
+						<p>
+							Когда Луна проходит точно между Землей и Солнцем, происходит полное
+							солнечное затмение. Это единственный момент, когда мы можем увидеть
+							солнечную корону — внешнюю атмосферу звезды — невооруженным глазом.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<!-- FAQ -->
+			<section class="section">
+				<div class="container">
+					<div class="section__header animate-fade-down">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Какого цвета Солнце?</summary>
+							<p>
+								На самом деле Солнце белое. Желтым оно кажется из-за рассеяния света
+								в атмосфере Земли (синий цвет рассеивается сильнее, оставляя
+								желто-красные оттенки). Из космоса оно выглядит ослепительно белым.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Когда Солнце погаснет?</summary>
+							<p>
+								Примерно через 5 миллиардов лет. Оно исчерпает водород, раздуется в
+								красный гигант (поглотив Меркурий и Венеру), а затем сбросит
+								оболочку и станет белым карликом.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Как мы знаем состав Солнца?</summary>
+							<p>
+								С помощью спектроскопии. Каждый химический элемент поглощает свет на
+								определенных частотах, оставляя "отпечатки пальцев" (линии
+								поглощения) в спектре солнечного света.
+							</p>
+						</details>
+					</div>
 				</div>
 			</section>
 		</main>
