--- a/blackholes/supermassive.html
+++ b/blackholes/supermassive.html
@@ -230,6 +230,198 @@
 					</article>
 				</div>
 			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ИСТОРИЯ</span>
+						<h2 class="section__title">От гипотезы к открытию</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Идея о существовании массивных объектов в центрах галактик впервые
+							появилась в 1960-х годах. Астрономы заметили, что некоторые галактики
+							испускают необычно большое количество энергии из своих центров. В 1964
+							году Эдвин Салпетер и Яков Зельдович независимо предложили, что
+							источником этой энергии могут быть аккрецирующие чёрные дыры.
+						</p>
+						<p style="margin-bottom: 16px">
+							Прорыв произошёл в 1990-х годах с запуском космического телескопа
+							"Хаббл". Астрономы смогли измерить скорости звёзд и газа в центрах
+							галактик и обнаружить, что они вращаются вокруг невидимых массивных
+							объектов. В 1994 году было подтверждено существование сверхмассивной
+							чёрной дыры в центре нашей галактики — Стрельца A*.
+						</p>
+						<p>
+							Современные исследования с помощью телескопа Event Horizon Telescope в
+							2019 году получили первое изображение тени чёрной дыры в галактике M87,
+							подтвердив теоретические предсказания о структуре и свойствах этих
+							объектов.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ФОРМИРОВАНИЕ</span>
+						<h2 class="section__title">Рождение гигантов</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Существует две основные теории формирования сверхмассивных чёрных дыр.
+							Первая — "снизу-вверх": массивные звёзды первого поколения (популяция
+							III) коллапсируют в чёрные дыры массой 100-1000 солнечных, которые затем
+							растут путём аккреции и слияний.
+						</p>
+						<p style="margin-bottom: 16px">
+							Вторая теория — "сверху-вниз": в ранней Вселенной напрямую коллапсируют
+							огромные облака газа, образуя "семенные" чёрные дыры массой 10 000-100
+							000 солнечных. Это объясняет существование массивных квазаров уже через
+							800 миллионов лет после Большого взрыва.
+						</p>
+						<p>
+							Рост сверхмассивных чёрных дыр ограничен процессом Эддингтона — балансом
+							между гравитационным притяжением и давлением излучения. При максимальной
+							аккреции чёрная дыра может удвоить свою массу за 45 миллионов лет, но в
+							реальности рост происходит медленнее из-за различных ограничивающих
+							факторов.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ВЛИЯНИЕ</span>
+						<h2 class="section__title">Архитекторы галактик</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							Сверхмассивные чёрные дыры играют ключевую роль в эволюции галактик.
+							Процесс "обратной связи" регулирует звездообразование: активные
+							аккреционные диски генерируют мощные ветры и джеты, которые могут
+							выдувать газ из галактики, останавливая рождение новых звёзд.
+						</p>
+						<p style="margin-bottom: 16px">
+							Интересно, что масса центральной чёрной дыры коррелирует с массой балджа
+							галактики — примерно 0.1-0.5% от его массы. Это говорит о совместной
+							эволюции чёрной дыры и её галактики-хозяина, хотя точный механизм этой
+							связи до сих пор изучается.
+						</p>
+						<p>
+							В некоторых случаях сверхмассивные чёрные дыры могут полностью "убить"
+							свою галактику, превратив её в "красную и мёртвую" эллиптическую систему
+							без активного звездообразования. Этот процесс важен для понимания того,
+							почему во Вселенной существует два основных типа галактик.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ИЗВЕСТНЫЕ ПРИМЕРЫ</span>
+						<h2 class="section__title">Гиганты Вселенной</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							<strong>Стрелец A*</strong> — чёрная дыра в центре Млечного Пути, массой
+							4 миллиона солнечных. Относительно спокойная, но периодически поглощает
+							газовые облака, вызывая кратковременные вспышки рентгеновского
+							излучения.
+						</p>
+						<p style="margin-bottom: 16px">
+							<strong>M87*</strong> — сверхмассивная чёрная дыра в галактике Мессье
+							87, массой 6.5 миллиардов солнечных. Первый объект, чья тень была
+							непосредственно наблюдена телескопом Event Horizon Telescope в 2019
+							году.
+						</p>
+						<p>
+							<strong>TON 618</strong> — самый массивный известный объект, массой 66
+							миллиардов солнечных. Находится на расстоянии 10.4 миллиарда световых
+							лет. Её аккреционный диск светит в 140 раз ярче, чем вся Млечная Путь.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">МЕТОДЫ ОБНАРУЖЕНИЯ</span>
+						<h2 class="section__title">Как видят невидимое</h2>
+					</div>
+					<article class="animate-fade-in" style="color: var(--fg-dim)">
+						<p style="margin-bottom: 16px">
+							<strong>Доплеровская спектроскопия</strong> измеряет скорости звёзд и
+							газа вокруг центра галактики. По кривым вращения определяется масса
+							невидимого объекта. Этот метод позволил открыть большинство известных
+							сверхмассивных чёрных дыр.
+						</p>
+						<p style="margin-bottom: 16px">
+							<strong>Рентгеновская астрономия</strong> обнаруживает горячий газ в
+							аккреционных дисках, который нагревается до миллионов градусов и
+							излучает в рентгеновском диапазоне. Телескопы "Чандра" и "XMM-Newton"
+							специализируются на таких наблюдениях.
+						</p>
+						<p>
+							<strong>Радиоинтерферометрия</strong> со сверхдлинными базами (VLBI)
+							позволяет "увидеть" тень чёрной дыры. Телескоп Event Horizon Telescope
+							объединяет данные со радиотелескопов по всей Земле, создавая виртуальный
+							телескоп размером с планету.
+						</p>
+					</article>
+				</div>
+			</section>
+
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">FAQ</span>
+						<h2 class="section__title">Частые вопросы</h2>
+					</div>
+					<div class="faq">
+						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+							<summary>Могут ли сверхмассивные чёрные дыры сливаться?</summary>
+							<p>
+								Да, при слиянии галактик их центральные чёрные дыры постепенно
+								сближаются и в итоге сливаются, излучая гравитационные волны. Этот
+								процесс может занять миллиарды лет, но детектирован телескопом LIGO
+								в нескольких случаях.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+							<summary>Что будет, если упасть в сверхмассивную чёрную дыру?</summary>
+							<p>
+								Из-за огромного размера приливные силы на горизонте событий
+								относительно слабы. Можно пересечь горизонт событий, не почувствовав
+								разрыва. Но время внутри замедляется, и наблюдатель снаружи увидит,
+								как вы замедляетесь и исчезаете.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+							<summary>Существует ли предел массы сверхмассивных чёрных дыр?</summary>
+							<p>
+								Теоретический предел около 50 миллиардов солнечных масс. При большей
+								массе аккреционный диск становится нестабильным и сам превращается в
+								чёрную дыру. TON 618 близок к этому пределу.
+							</p>
+						</details>
+						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+							<summary>Почему в Млечном Пути чёрная дыра такая маленькая?</summary>
+							<p>
+								Стрелец A* неактивен — мало газа для аккреции. В прошлом он мог быть
+								активнее, но сейчас "спит". Многие галактики имеют более массивные
+								центры из-за различной истории слияний и аккреции.
+							</p>
+						</details>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
